syntax = "proto3";

package inventory;

option go_package = "inventory";

// ErrorResponse is a message returned on HTTP error.
message ErrorResponse {
  string error = 1;
  string message = 2;
  int32 code = 3;
}
